<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account_balance"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/loans" />
        <item
            android:id="@+id/documents"
            android:icon="@drawable/ic_backup_black"
            android:title="@string/documents" />


    </group>

    <item android:title="@string/app_details">
        <menu>

            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
