<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
          >

        <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/ediproperty_name"
        android:hint="@string/property_name"/>

      <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
          android:layout_marginTop="10dp">

    <EditText

        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/property_location"
     android:hint="@string/property_location"/>

    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_alignLeft="@+id/property_location"
        android:id="@+id/edtplot_number"
        android:hint="@string/plot_number"
        android:layout_gravity="center_horizontal" />

      </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:textColor="@color/colorPrimary"
        android:text="@string/specify_ownership"
        android:layout_gravity="center_horizontal" />



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinproperty_spinner"
        android:entries="@array/property_ownership"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
    <EditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
          android:inputType="number"
        android:id="@+id/edtnumber_occupancy"
        android:hint="@string/number_occupancy"/>

    <EditText

        android:layout_width="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/hse_income"
       android:layout_height="wrap_content"
        android:id="@+id/editincome" />

            </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hse_images"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"

        android:background="@drawable/ic_cloud_upload_3x"
        android:id="@+id/img_property"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/btnsubmit"
        android:layout_gravity="center_horizontal" />

        </LinearLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>


